# debian-libdebian-installer

./: .gitignore  Makefile.am  configure.ac
.github/workflows/: release.yml
debian/: changelog  control  copyright  libdebian-installer4-dev.install  libdebian-installer5-dev.install  rules
doc/: Doxyfile.in
include/: debian-installer.h
include/debian-installer/: Makefile.am  digest.h  exec.h  file.h  file_rfc822.h  hash.h  list.h  log.h  macros.h  mem.h  mem_chunk.h  package.h  package_internal.h  packages.h  packages_internal.h  parser.h  parser_rfc822.h  release.h  slist.h  slist_internal.h  string.h  tree.h  types.h  utils.h  version.h
include/debian-installer/system/: devfs.h  dpkg.h  dpkg_internal.h  packages.h  prebaseconfig.h  subarch.h  utils.h
src/: Makefile.am  exec.c  file.c  file_rfc822_read.c  hash.c  libdebian-installer-extra.ver  libdebian-installer.ver  list.c  log.c  mem.c  mem_chunk.c  package.c  package_file.c  package_internal.h  package_parser.c  packages.c  packages_internal.h  packages_parser.c  parser.c  parser_rfc822.c  release.c  release_file.c  release_internal.h  release_parser.c  slist.c  string.c  tree.c  utils.c  version.c
src/system/: Makefile.am  devfs.c  dpkg.c  efi.c  packages.c  prebaseconfig.c  subarch-arm-linux.c  subarch-arm64-linux.c  subarch-mips-linux.c  subarch-mipsel-linux.c  subarch-sparc-linux.c  subarch-x86-linux.c  utils.c
test/: Makefile.am  main.c  test.h  test_exec.c  test_file_rfc822.c  test_hash.c  test_package.c  test_packages.c  test_release.c  test_system_packages.c  test_version.c
