SUBDIRS = system

realincludedir = $(includedir)/debian-installer

realinclude_HEADERS = \
	config.h \
	exec.h \
	hash.h \
	file_rfc822.h \
	list.h \
	log.h \
	macros.h \
	mem.h \
	mem_chunk.h \
	package.h \
	packages.h \
	parser.h \
	parser_rfc822.h \
	release.h \
	slist.h \
	string.h \
	tree.h \
	types.h \
	utils.h

noinst_HEADERS = \
	package_internal.h \
	packages_internal.h \
	slist_internal.h

