SUBDIRS = system

realincludedir = $(includedir)/debian-installer

realinclude_HEADERS = \
	config.h \
	exec.h \
	hash.h \
	file.h \
	file_rfc822.h \
	list.h \
	log.h \
	macros.h \
	mem.h \
	mem_chunk.h \
	package.h \
	packages.h \
	release.h \
	slist.h \
	string.h \
	tree.h \
	types.h \
	utils.h \
	version.h

noinst_HEADERS = \
	packages_internal.h \
	slist_internal.h

